tests/rosetta/out/Swift/call-a-function-5.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:47Z
func doIt(_ p: [String: Int]) -> Int {
    var b = 0
    if p.contains("b") {
        b = p["b"]
    }
    return p["a"] + b + p["c"]
}
func main() {
    var p: [String: Int] = []
    p["a"] = 1
    p["c"] = 9
    print(String(doIt(p)))
}
main()
